@@ -1,9 +1,12 @@
 2007-08-21  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/dependency_installer.rb: Add installation from local
-	gems.  Install gems in the correct order.
+	gems.  Install gems in the correct order.  Handle -E, -f,
+	--ignore-dependencies, -i, -r, -l, -b, -P, -w, -v options for `gem
+	install`
 	* test/gemutilities.rb: Work around OS X /private/tmp.
-	* lib/rubygems/platform.rb: Switch to using arch instead of target_*.
+	* lib/rubygems/platform.rb: Switch to using arch instead of target_*
+	for JRuby compatibility.  Thanks to Nick Sieger.
 
 2007-08-20  Eric Hodel  <drbrain@segment7.net>
 
